# HugoTTP

./: CMakeLists.txt  README.md
include/: get.h  headers.h  init.h  request.h
src/: CMakeLists.txt  get.c  headers.c  hugottp.c  init.c  request.c
